lorem ipsum ersetzt

--- a/PortfolioNachgebautTest/index.html
+++ b/PortfolioNachgebautTest/index.html
@@ -31,9 +31,9 @@
         <div class="home-content">
             <h1>Alexander Wirschke</h1>
             <h3>Student</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis accusantium voluptatum accusamus repudiandae nostrum, mollitia ipsa in sapiente assumenda, ipsum ipsam delectus inventore dolorem saepe dolor aspernatur quod, animi cumque!</p>
+            <p>Hallo, ich bin Alex und bin 23 Jahre alt. Ich liebe Programmieren und arbeite gerne mit HTML, CSS, JavaScript, Python und Django. Zurzeit bin ich auf der Suche nach spannenden Projekten und Möglichkeiten, bei denen ich meine Fähigkeiten und Leidenschaft für die Programmierung einbringen kann.</p>
             <div class="btn-box">
-                <a href="#">Schreibe mir eine Nachricht</a>
+                <a href="#contact">Schreibe mir eine Nachricht</a>
             </div>
         </div>
 
@@ -68,7 +68,9 @@
 
         <div class="about-content">
             <h3>Student!</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum error blanditiis et consectetur nisi distinctio. Corporis repellat praesentium quae minus sapiente architecto? Fugit nesciunt adipisci commodi, optio sequi laudantium labore!</p>
+            <p>Als jemand, der in einer digitalisierten Welt aufgewachsen ist, war ich schon immer fasziniert von der Technologie und den endlosen Möglichkeiten, die sie bietet. Deshalb habe ich mich entschieden, meine Leidenschaft für das Programmieren zu einer beruflichen Fähigkeit zu machen.
+            In meiner Freizeit gehe ich zum Fitness, um gesund und fit zu bleiben, und ich spiele auch gerne ab und zu Videospiele, um mich zu entspannen.
+            Ich bin begeistert von der Herausforderung, Probleme mit dem Codieren zu lösen und elegante, effiziente Lösungen zu erstellen. Durch meine Leidenschaft und meine Fähigkeiten in der Programmierung bin ich überzeugt, dass ich einen wertvollen Beitrag zu jedem Projekt leisten kann.</p>
         </div>
     </section>
 
@@ -192,8 +194,8 @@
                 <img src="images/random.png" alt="">
                 <div class="portfolio-layer">
                     <h4>Taschenrechner</h4>
-                    <p>Ein simpler Taschenrechner mit HTML, CSS und JavaScript</p>
-                    <a href="https://github.com/NoShare16/Beginner-Projects/tree/main/Calculator"><i class='bx bxl-github'></i></a>
+                    <p>Ein Taschenrechner mit eval() function.</p>
+                    <a href="https://github.com/NoShare16/Beginner-Projects/tree/main/Calculator" target="_blank" rel="noopener noreferrer"><i class='bx bxl-github'></i></a>
                 </div>
             </div>
 
@@ -201,8 +203,8 @@
                 <img src="images/random.png" alt="">
                 <div class="portfolio-layer">
                     <h4>Expense Tracker</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a href="https://github.com/NoShare16/Beginner-Projects/tree/main/ExpenseTracker"><i class='bx bxl-github'></i></a>
+                    <p>Der Expense Tracker ist durch simples JavaScript enstanden.</p>
+                    <a href="https://github.com/NoShare16/Beginner-Projects/tree/main/ExpenseTracker" target="_blank" rel="noopener noreferrer"><i class='bx bxl-github'></i></a>
                 </div>
             </div>
 
@@ -210,8 +212,8 @@
                 <img src="images/random.png" alt="">
                 <div class="portfolio-layer">
                     <h4>Password Generator</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a href="https://github.com/NoShare16/Beginner-Projects/tree/main/PasswordGenerator"><i class='bx bxl-github'></i></a>
+                    <p>Hier habe ich mit forLoops, Functions und if statements gearbeitet.</p>
+                    <a href="https://github.com/NoShare16/Beginner-Projects/tree/main/PasswordGenerator" target="_blank" rel="noopener noreferrer"><i class='bx bxl-github'></i></a>
                 </div>
             </div>
 
@@ -219,8 +221,8 @@
                 <img src="images/random.png" alt="">
                 <div class="portfolio-layer">
                     <h4>Rock Paper Scissors</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a href="https://github.com/NoShare16/Beginner-Projects/tree/main/RPS"><i class='bx bxl-github'></i></a>
+                    <p>Schere Stein Papier Spiel mit if statements entwickelt.</p>
+                    <a href="https://github.com/NoShare16/Beginner-Projects/tree/main/RPS" target="_blank" rel="noopener noreferrer"><i class='bx bxl-github'></i></a>
                 </div>
             </div>
 
@@ -228,17 +230,17 @@
                 <img src="images/random.png" alt="">
                 <div class="portfolio-layer">
                     <h4>Wetter App</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a href="https://github.com/NoShare16/Beginner-Projects/tree/main/WeatherApp"><i class='bx bxl-github'></i></a>
+                    <p>Hier habe ich mit einer Wetter API unf fetch() gearbeitet.</p>
+                    <a href="https://github.com/NoShare16/Beginner-Projects/tree/main/WeatherApp" target="_blank" rel="noopener noreferrer"><i class='bx bxl-github'></i></a>
                 </div>
             </div>
 
             <div class="portfolio-box">
                 <img src="images/random.png" alt="">
                 <div class="portfolio-layer">
-                    <h4>Web Design</h4>
+                    <h4>Coming soon!</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a href="#"><i class='bx bxl-github'></i></a>
+                    <a href="#" target="_blank" rel="noopener noreferrer"><i class='bx bxl-github'></i></a>
                 </div>
             </div>
         </div>
