lorem ipsum im Lebenslauf ersetzt

--- a/PortfolioNachgebautTest/index.html
+++ b/PortfolioNachgebautTest/index.html
@@ -86,25 +86,29 @@
                 <div class="education-box">
                     <div class="education-content">
                         <div class="content">
-                            <div class="year"><i class='bx bxs-calendar' ></i> 2017 - 2018</div>
-                            <h3>Schule</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo sit asperiores earum omnis, magni sunt adipisci provident fuga minima quia!</p>
+                            <div class="year"><i class='bx bxs-calendar' ></i> 2019</div>
+                            <h3>Fachhochschulreife</h3>
+                            <p>Fachhochschulreife an der MMBBS erlangt, wo ich diverse Skills zum Grafik Design und 3D Design erlangt habe in Programmen wie Blender, Photoshop, Illustrator etc.</p>
                         </div>
                     </div>
 
                     <div class="education-content">
                         <div class="content">
-                            <div class="year"><i class='bx bxs-calendar' ></i> 2018 - 2019</div>
-                            <h3>Schule</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo sit asperiores earum omnis, magni sunt adipisci provident fuga minima quia!</p>
+                            <div class="year"><i class='bx bxs-calendar' ></i> 2017</div>
+                            <h3>Mittlere Reife</h3>
+                            <p>Mittlere Reife an der Schiller-Oberschule erlangt. <br> 
+                                -- <br>
+                                --
+                            </p>
                         </div>
                     </div>
 
                     <div class="education-content">
                         <div class="content">
-                            <div class="year"><i class='bx bxs-calendar' ></i> 2019 - 2020</div>
+                            <div class="year"><i class='bx bxs-calendar' ></i> ???</div>
                             <h3>Schule</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo sit asperiores earum omnis, magni sunt adipisci provident fuga minima quia!</p>
+                            <p>Platzhalter, da ich hier gerne noch mein Studium in Zukunft einfügen möchte. <br>
+                            -- </p>
                         </div>
                     </div>
                 </div>
@@ -116,25 +120,25 @@
                 <div class="education-box">
                     <div class="education-content">
                         <div class="content">
-                            <div class="year"><i class='bx bxs-calendar' ></i> 2017 - 2018</div>
-                            <h3>Work</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo sit asperiores earum omnis, magni sunt adipisci provident fuga minima quia!</p>
+                            <div class="year"><i class='bx bxs-calendar' ></i> 2022 - Heute</div>
+                            <h3>Aushilfe als Chemisch-technischer Assistent</h3>
+                            <p>Angestellt bei der Firma Meko in Sarstedt, arbeite ich in der Elektropolitur, wo ich medizinische Implantate mit Strom poliere und am Mikroskop die Qualität untersuche.</p>
+                        </div>
+                    </div>
+
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class='bx bxs-calendar' ></i> 2020 - 2022</div>
+                            <h3>Content Moderator</h3>
+                            <p>Als Content Moderator bei Majorel GmbH gearbeitet, wo ich verschiedenen Content für Social Media Platformen moderiert habe und die KI für Search Queries mit Daten gefüttert habe. Ich habe neue Policies geschrieben für die Moderation um sie zu optimieren und außerdem neue Angestellte angelernt.</p>
                         </div>
                     </div>
 
                     <div class="education-content">
                         <div class="content">
                             <div class="year"><i class='bx bxs-calendar' ></i> 2018 - 2019</div>
-                            <h3>Work</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo sit asperiores earum omnis, magni sunt adipisci provident fuga minima quia!</p>
-                        </div>
-                    </div>
-
-                    <div class="education-content">
-                        <div class="content">
-                            <div class="year"><i class='bx bxs-calendar' ></i> 2019 - 2020</div>
-                            <h3>Work</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo sit asperiores earum omnis, magni sunt adipisci provident fuga minima quia!</p>
+                            <h3>Aushilfe Produktion</h3>
+                            <p>Bei der Firma TOM&CO habe ich die Kundenbetreuung gelernt und außerdem mit Photoshop und Corel gearbeitet. Davor habe ich dort ein einjähriges Praktikum absolviert im Rahmen meiner Fachhochschulreife.</p>
                         </div>
                     </div>
                 </div>
