projects pictures change

--- a/PortfolioNachgebautTest/index.html
+++ b/PortfolioNachgebautTest/index.html
@@ -196,7 +196,7 @@
         <div class="portfolio-container">
             <div class="portfolio-box">
                 <!--Aspect Ratio 16:9 hat geklappt-->
-                <img src="images/random.png" alt="">
+                <img src="images/hoodedHacker.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Taschenrechner</h4>
                     <p>Ein Taschenrechner mit eval() function.</p>
@@ -205,7 +205,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="images/random.png" alt="">
+                <img src="images/PersonTalkingAi.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Expense Tracker</h4>
                     <p>Der Expense Tracker ist durch simples JavaScript enstanden.</p>
@@ -214,7 +214,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="images/random.png" alt="">
+                <img src="images/TeachingAi.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Password Generator</h4>
                     <p>Hier habe ich mit forLoops, Functions und if statements gearbeitet.</p>
@@ -223,7 +223,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="images/random.png" alt="">
+                <img src="images/HandLens.png" alt="">
                 <div class="portfolio-layer">
                     <h4>Rock Paper Scissors</h4>
                     <p>Schere Stein Papier Spiel mit if statements entwickelt.</p>
@@ -232,7 +232,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="images/random.png" alt="">
+                <img src="images/HandLightbulb.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Wetter App</h4>
                     <p>Hier habe ich mit einer Wetter API unf fetch() gearbeitet.</p>
@@ -241,7 +241,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="images/random.png" alt="">
+                <img src="images/HandPhone.jpeg" alt="">
                 <div class="portfolio-layer">
                     <h4>Coming soon!</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
