ProfilePic added with styling

--- a/PortfolioNachgebautTest/index.html
+++ b/PortfolioNachgebautTest/index.html
@@ -43,7 +43,7 @@
                 <span></span>
                 <div class="image">
                     <!--Bild einfügen nicht vergessen!!-->
-                    <img src="" alt="">
+                    <img src="images/IMG_7380-transformed-removebg-R7JpmvJQE-transformed.png" alt="">
                 </div>
             </div>
         </div>
@@ -61,7 +61,7 @@
                 <span></span>
                 <div class="about-image">
                     <!--Bild einfügen nicht vergessen!!-->
-                    <img src="" alt="">
+                    <img src="images/IMG_7380-transformed-removebg-R7JpmvJQE-transformed.png" alt="">
                 </div>
             </div>
         </div>
