platzhalter in education

--- a/PortfolioNachgebautTest/index.html
+++ b/PortfolioNachgebautTest/index.html
@@ -105,9 +105,9 @@
 
                     <div class="education-content">
                         <div class="content">
-                            <div class="year"><i class='bx bxs-calendar' ></i> ???</div>
-                            <h3>Schule</h3>
-                            <p>Platzhalter, da ich hier gerne noch mein Studium in Zukunft einfügen möchte. <br>
+                            <div class="year"><i class='bx bxs-calendar' ></i> Platzhalter</div>
+                            <h3>Platzhalter</h3>
+                            <p>Platzhalter <br>
                                 <br>
                             </p>
                         </div>
