portfolio added github link for "coming soon"

--- a/PortfolioNachgebautTest/index.html
+++ b/PortfolioNachgebautTest/index.html
@@ -245,7 +245,7 @@
                 <div class="portfolio-layer">
                     <h4>Coming soon!</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a href="#" target="_blank" rel="noopener noreferrer"><i class='bx bxl-github'></i></a>
+                    <a href="https://github.com/NoShare16" target="_blank" rel="noopener noreferrer"><i class='bx bxl-github'></i></a>
                 </div>
             </div>
         </div>
